# poetry_fast_api

./: pyproject.toml
