[tool.poetry]
name = "microshop"
version = "0.1.0"
description = "My practice project rught now"
authors = ["mr-robot <alenjon2594@gmail.com>"]
license = "MINE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standart"], version = "^0.27.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
